--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,10 +7,7 @@ website:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
-
+        href: https://github.com/LucaWBohnenberger/my-blog
 
 format:
   html:
